RESOLVED FIXED127952
decidePolicyForNewWindowAction should take a NavigationActionData object
https://bugs.webkit.org/show_bug.cgi?id=127952
Summary decidePolicyForNewWindowAction should take a NavigationActionData object
Anders Carlsson
Reported 2014-01-30 14:45:47 PST
decidePolicyForNewWindowAction should take a NavigationActionData object
Attachments
Patch (6.16 KB, patch)
2014-01-30 14:46 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-01-30 14:46:23 PST
WebKit Commit Bot
Comment 2 2014-01-30 14:49:16 PST
Attachment 222741 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:55: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2014-01-30 14:58:18 PST
Comment on attachment 222741 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222741&action=review > Source/WebKit2/UIProcess/API/C/WKPage.cpp:1014 > - virtual void decidePolicyForNewWindowAction(WebPageProxy* page, WebFrameProxy* frame, NavigationType type, WebEvent::Modifiers modifiers, WebMouseEvent::Button mouseButton, const ResourceRequest& resourceRequest, const String& frameName, WebFramePolicyListenerProxy* listener, API::Object* userData) override > + virtual void decidePolicyForNewWindowAction(WebPageProxy* page, WebFrameProxy* frame, const NavigationActionData& navigationActionData, const ResourceRequest& resourceRequest, const String& frameName, RefPtr<WebFramePolicyListenerProxy> listener, API::Object* userData) override This 'listener' should get moved.
Anders Carlsson
Comment 4 2014-01-30 14:59:38 PST
Note You need to log in before you can comment on or make changes to this bug.