decidePolicyForNewWindowAction should take a NavigationActionData object https://bugs.webkit.org/show_bug.cgi?id=127952

Reviewed by Dan Bernstein.

* UIProcess/API/APIPolicyClient.h:
(API::PolicyClient::decidePolicyForNewWindowAction):
* UIProcess/API/C/WKPage.cpp:
(WKPageSetPagePolicyClient):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNewWindowAction):

Canonical link: https://commits.webkit.org/145946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163123 268f45cc-cd09-0410-ab3c-d52691b4dbfc